<resources>
    <string name="app_name">Asystent Nauczyciela</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="additional">Dodatkowe Ustawienia</string>
    <string name="subjects">Lista przedmiotów</string>
    <string name="main_welcome">Witaj nauczycielu!</string>
    <string name="back">Wróć</string>
    <string name="new_student">Nowy student</string>
    <string name="new_subject">Nowy przedmiot</string>
    <string name="subject_info">Informacje o przedmiocie</string>
    <string name="student_grades">Oceny studenta</string>
    <string name="new_grade">Nowa ocena</string>
    <string name="subject_name">Nazwa przedmiotu</string>
    <string name="subject_day">Dzień</string>
    <string name="subject_start_hour">Godzina rozpoczęcia</string>
    <string name="subject_end_hour">Godzina zakończenia</string>
    <string name="student_first_name">Imię</string>
    <string name="student_last_name">Nazwisko</string>
    <string name="add_student">Dodaj studenta</string>
    <string name="add_subject">Dodaj przedmiot</string>
    <string name="assign_students">Przypisz studentów</string>
    <string name="album_number">Numer albumu</string>
    <string name="grade_average">Średnia ocen</string>
    <string name="add_grade">Dodaj ocenę</string>
    <string name="grade">Ocena</string>
    <string name="weight">Waga</string>
    <string name="description">Opis</string>
    <string name="settings">Ustawienia</string>
    <string name="remove_students_and_subjects">Usuń studentów i przedmioty</string>
    <string name="remove_subjects">Usuń przedmioty</string>
    <string name="remove_students">Usuń studentów</string>
    <string name="confirm">Potwierdź</string>
    <string name="cancel">Anuluj</string>

    <string name="msg_remove_students">Czy chcesz usunąć studentów?</string>
    <string name="msg_remove_subjects">Czy chcesz usunąć przedmioty?</string>
    <string name="msg_remove_students_and_subjects">Czy chcesz usunąć studentów i przedmioty?</string>
    <string name="hours">Godziny</string>
</resources>