<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_student_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_student"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_student_first_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/student_first_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_student_text" />

    <EditText
        android:id="@+id/add_student_last_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/student_last_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_student_first_name" />


    <Button
        android:id="@+id/button_add_student_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_add_student"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/add_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_add_student_back" />

</androidx.constraintlayout.widget.ConstraintLayout>