<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_settings_remove_students"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/red"
        android:text="@string/remove_students"
        app:layout_constraintBottom_toTopOf="@id/button_settings_remove_subjects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_settings_remove_subjects"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/red"
        android:text="@string/remove_subjects"
        app:layout_constraintBottom_toTopOf="@id/button_settings_remove_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_settings_remove_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/red"
        android:text="@string/remove_students_and_subjects"
        app:layout_constraintBottom_toTopOf="@id/button_settings_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_settings_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>