<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_subject_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_subject"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_subject_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/subject_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_subject_text" />

    <EditText
        android:id="@+id/add_subject_day"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/subject_day"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_subject_name" />

    <TextView
        android:id="@+id/add_subject_start_hour_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/subject_start_hour"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@id/add_subject_end_hour_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_subject_day" />

    <TextView
        android:id="@+id/add_subject_end_hour_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/subject_end_hour"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_subject_start_hour_text"
        app:layout_constraintTop_toBottomOf="@id/add_subject_day" />

    <EditText
        android:id="@+id/add_subject_start_hour"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:hint="hh"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/add_subject_start_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_subject_start_hour_text" />

    <EditText
        android:id="@+id/add_subject_start_min"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="mm"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/add_subject_end_hour"
        app:layout_constraintStart_toEndOf="@+id/add_subject_start_hour"
        app:layout_constraintTop_toBottomOf="@id/add_subject_start_hour_text" />

    <EditText
        android:id="@+id/add_subject_end_hour"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="hh"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/add_subject_end_min"
        app:layout_constraintStart_toEndOf="@+id/add_subject_start_min"
        app:layout_constraintTop_toBottomOf="@id/add_subject_end_hour_text" />

    <EditText
        android:id="@+id/add_subject_end_min"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="mm"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_subject_end_hour"
        app:layout_constraintTop_toBottomOf="@id/add_subject_end_hour_text" />


    <Button
        android:id="@+id/button_add_subject_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_add_subject"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/add_subject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_add_subject_back" />

</androidx.constraintlayout.widget.ConstraintLayout>