<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_grade_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_grade"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/add_grade_subject_name"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="20dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:hint="@string/subject_name"-->
    <!--        android:textSize="22sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/add_grade_text" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/add_grade_student_album_number"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="20dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:hint="@string/album_number"-->
    <!--        android:textSize="22sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/add_grade_subject_name" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/add_grade_student_first_name"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="20dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:hint="@string/student_first_name"-->
    <!--        android:textSize="22sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/add_grade_student_album_number" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/add_grade_student_last_name"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="20dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:hint="@string/student_last_name"-->
    <!--        android:textSize="22sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/add_grade_student_first_name" />-->

    <LinearLayout
        android:id="@+id/layout_grades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_grade_text">

        <TextView
            android:id="@+id/add_grade_student_grade_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/grade"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinner_add_grade_student_grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_weights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_grades">

        <TextView
            android:id="@+id/add_grade_student_weight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/weight"
            android:textSize="23sp" />

        <Spinner
            android:id="@+id/spinner_add_grade_student_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:textSize="22sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/add_grade_student_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:hint="@string/description"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_weights" />


    <Button
        android:id="@+id/button_add_grade_student_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_add_grade_student"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_grade_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/add_grade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_add_grade_student_back" />

</androidx.constraintlayout.widget.ConstraintLayout>